--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,36 @@
     margin: 0;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .about-review-slider {
+    width: 944px !important;
+  }
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.destinationSlice {
+  backface-visibility: unset !important;
+}
