[DONE] add blog post static

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,8 @@
 .destinationSlice {
   backface-visibility: unset !important;
 }
+
+.mySwiper [class^="swiper-button-"]::after {
+  font-size: 30px;
+  color: white;
+}
