--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,3 +160,75 @@
   font-size: 80px;
 }
 
+/* ===================================
+RippleSpinner.css
+ ===================================*/
+
+@keyframes ldio-cuhtczo56nm {
+  0% {
+    top: 103.39px;
+    left: 103.39px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 26.375px;
+    left: 26.375px;
+    width: 154.03px;
+    height: 154.03px;
+    opacity: 0;
+  }
+}
+
+@keyframes ldio-cuhtczo56nm {
+  0% {
+    top: 103.39px;
+    left: 103.39px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 26.375px;
+    left: 26.375px;
+    width: 154.03px;
+    height: 154.03px;
+    opacity: 0;
+  }
+}
+.ldio-cuhtczo56nm div {
+  position: absolute;
+  border-width: 2.11px;
+  border-style: solid;
+  opacity: 1;
+  border-radius: 50%;
+  animation: ldio-cuhtczo56nm 0.9174311926605504s cubic-bezier(0, 0.2, 0.8, 1)
+    infinite;
+}
+.ldio-cuhtczo56nm div:nth-child(1) {
+  border-color: #93dbe9;
+  animation-delay: 0s;
+}
+.ldio-cuhtczo56nm div:nth-child(2) {
+  border-color: #689cc5;
+  animation-delay: -0.4587155963302752s;
+}
+.loadingio-spinner-ripple-rb4jmfu3pu {
+  width: 211px;
+  height: 211px;
+  display: inline-block;
+  overflow: hidden;
+  background: #f3f4f6;
+}
+.ldio-cuhtczo56nm {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-cuhtczo56nm div {
+  box-sizing: content-box;
+}
